k8s/minio/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: minio-route
  namespace: storage

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - minio.xambook.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: minio-console
          port: 9001
